# practicals

./: .gitignore  pyproject.toml
dav/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb
dav/Python/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  nlp.ipynb
dav/R/: dav.Rproj  lin_reg.R  ts.R  ts2.R
dwhm/: hits.py  k_m.py  k_means.py  lin_reg.py  naive_bayes.py  nb.py  nb_1.py  pagerank.py
ml/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
